Add Firebase integration and data upload functionality; include Firebase configuration, implement data fetching for immigration offices and photo booths, and update map component to utilize Firebase data sources.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "upload-data": "node scripts/uploadData.js"
   },
   "dependencies": {
+    "firebase": "^11.9.1",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
