Add Help & Support component with contact support functionality; include new styles for help section and buttons; update package.json to include emailjs dependency; add .env to .gitignore for environment variable management.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "upload-data": "node scripts/uploadData.js"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "firebase": "^11.9.1",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
