--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -9,14 +9,9 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/vizy.svg",
+      "src": "/vizy.png",
       "sizes": "192x192",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/passport.svg",
-      "sizes": "512x512",
-      "type": "image/svg+xml"
+      "type": "image/png"
     }
   ]
 }
