--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,17 +1,59 @@
 {
-  "name": "VIZY",
+  "name": "VIZY - Your Visa Companion",
   "short_name": "VIZY",
-  "description": "Your visa and travel companion app",
+  "description": "Your visa and travel companion app for managing visa applications, documents, and deadlines",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "orientation": "portrait",
+  "categories": ["travel", "productivity", "utilities"],
   "icons": [
     {
-      "src": "/vizy.png",
+      "src": "/VIZY.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/VIZY.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/vizy.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    }
+  ],
+  "screenshots": [],
+  "shortcuts": [
+    {
+      "name": "Reminders",
+      "short_name": "Reminders",
+      "description": "View and manage your visa reminders",
+      "url": "/reminders",
+      "icons": [
+        {
+          "src": "/vizy.svg",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Documents",
+      "short_name": "Documents",
+      "description": "Check your document checklist",
+      "url": "/",
+      "icons": [
+        {
+          "src": "/vizy.svg",
+          "sizes": "96x96"
+        }
+      ]
     }
   ]
 }
